--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name | Personal Website</title>
+  <title>Julio Luna-Piña | Personal Website</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -109,7 +109,7 @@
   <header>
     <img src="your-photo.jpg" alt="Your Name">
     <h1>Your Name</h1>
-    <p>Master’s Student in Management | Psychology Background | Aspiring Consultant</p>
+    <p>Master’s Student in Management | UChicago Booth | Aspiring Product Manager</p>
   </header>
 
   <nav>
@@ -122,7 +122,10 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Write a short paragraph introducing yourself — your academic background, current program, and career interests.</p>
+    <p>I am a Master in Management candidate at the University of Chicago Booth School of Business, building on my social science background from UChicago. As a research assistant at Booth, I contribute to behavioral science projects and am passionate about applying these insights to business strategy—particularly in the sports industry.
+Beyond academics, I’m proud to be a member of QuestBridge and the Hispanic Scholarship Fund communities. As QuestBridge chapter president, I led initiatives supporting underrepresented students, and through Illinois’ Reimagine Public Safety Act, I designed STEM curricula for at-risk youth.
+I aim to pivot into the sports industry after my program and look forward to connecting with others who share my interests in behavioral science, sports, and social impact!
+</p>
   </section>
 
   <section id="resume">
@@ -147,8 +150,8 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    <p>Email: <a href="mailto:julio.luna-pina@chicagobooth.edu">julio.luna-pina@chicagobooth.edu</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/juliolunapina" target="_blank">linkedin.com/in/juliolunapina</a></p>
   </section>
 
   <footer>
