--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
   <header>
-    <img src="your-photo.jpg" alt="Your Name">
+    <img src="Booth LinkedIn Profile Picture Headshot.jpg" alt="Your Name">
     <h1>Your Name</h1>
     <p>Master’s Student in Management | UChicago Booth | Aspiring Product Manager</p>
   </header>
