--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ I aim to pivot into the sports industry after my program and look forward to con
   <section id="resume">
     <h2>Resume</h2>
     <p>You can download my resume below:</p>
-    <a class="btn" href="resume.pdf" target="_blank">Download Resume</a>
+    <a class="btn" href="Luna-Piña, Julio Resume 2025-3.pdf" target="_blank">View & Download Resume</a>
   </section>
 
   <section id="projects">
